5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1808_2575.log
== TEST (2019-06-11 16:49:52) 
-- CODE:
from numpy import*
vet = array(eval(input"vetor de strings:"))
cont = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		cont [0] = cont[0] + 1
	elif (vet[i] == "NETFLIX"):
		cont[1] = cont[1] + 1
	else:
		cont[2] = cont[2] + 1
print(cont)



-- ERROR:
File "XXXX", line 2
    vet = array(eval(input"vetor de strings:"))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:50:09) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor de strings:"))
cont = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		cont [0] = cont[0] + 1
	elif (vet[i] == "NETFLIX"):
		cont[1] = cont[1] + 1
	else:
		cont[2] = cont[2] + 1
print(cont)



-- ERROR:
File "XXXX", line 3
    cont = zeros(3, dtype = int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:51:09) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor de strings:"))
cont = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		cont [0] = cont[0] + 1
	elif (vet[i] == "NETFLIX"):
		cont[1] = cont[1] + 1
	else:
		cont[2] = cont[2] + 1
print(cont)



-- ERROR:
File "XXXX", line 3
    cont = zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:51:29) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor de strings:"))
cont = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		cont [0] = cont[0] + 1
	elif (vet[i] == "NETFLIX"):
		cont[1] = cont[1] + 1
	else:
		cont[2] = cont[2] + 1
print(cont)



-- ERROR:
File "XXXX", line 3
    cont = zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:10) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor de strings:"))
cont = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		cont [0] = cont[0] + 1
	elif (vet[i] == "NETFLIX"):
		cont[1] = cont[1] + 1
	elif(vet[i] == "YOUTUBE")
		cont[2] = cont[2] + 1
print(cont)



-- ERROR:
File "XXXX", line 3
    cont = zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:54:10) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor de strings:"))
vtei = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		vtei [0] = vtei[0] + 1
	elif (vet[i] == "NETFLIX"):
		vtei[1] = vtei[1] + 1
	elif(vet[i] == "YOUTUBE")
		vtei[2] = vtei[2] + 1
print(cont)



-- ERROR:
File "XXXX", line 3
    vtei = zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:54:43) 
-- CODE:
from numpy import*
vet = array(eval(input("TV, NETFLIX e YOUTUBE:"))
vtei = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		vtei [0] = vtei[0] + 1
	elif (vet[i] == "NETFLIX"):
		vtei[1] = vtei[1] + 1
	elif(vet[i] == "YOUTUBE")
		vtei[2] = vtei[2] + 1
print(cont)



-- ERROR:
File "XXXX", line 3
    vtei = zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:55:04) 
-- CODE:
from numpy import*
vet = array(eval(input("TV, NETFLIX e YOUTUBE:"))
vtei = zeros(3)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		vtei [0] = vtei[0] + 1
	elif (vet[i] == "NETFLIX"):
		vtei[1] = vtei[1] + 1
	elif(vet[i] == "YOUTUBE")
		vtei[2] = vtei[2] + 1
print(cont)



-- ERROR:
File "XXXX", line 3
    vtei = zeros(3)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:55:25) 
-- CODE:
from numpy import*
vet = array(eval(input("TV, NETFLIX e YOUTUBE:"))
vtei = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		vtei [0] = vtei[0] + 1
	elif (vet[i] == "NETFLIX"):
		vtei[1] = vtei[1] + 1
	elif(vet[i] == "YOUTUBE"):
		vtei[2] = vtei[2] + 1
print(cont)



-- ERROR:
File "XXXX", line 3
    vtei = zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:56:17) 
-- CODE:
from numpy import*
vet = array(eval(input("TV, NETFLIX e YOUTUBE:"))
vtei = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		vtei [0] = vtei[0] + 1
	elif (vet[i] == "NETFLIX"):
		vtei[1] = vtei[1] + 1
	elif(vet[i] == "YOUTUBE"):
		vtei[2] = vtei[2] + 1
print(vtei)



-- ERROR:
File "XXXX", line 3
    vtei = zeros(3, dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:57:09) 
-- CODE:
from numpy import*
vet = array(eval(input("TV, NETFLIX e YOUTUBE:")))
vtei = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		vtei [0] = vtei[0] + 1
	elif (vet[i] == "NETFLIX"):
		vtei[1] = vtei[1] + 1
	elif(vet[i] == "YOUTUBE"):
		vtei[2] = vtei[2] + 1
print(vtei)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:57:35) 
-- CODE:
from numpy import*
vet = array(eval(input("TV, NETFLIX e YOUTUBE:")))
vtei = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		vtei [0] = vtei[0] + 1
	elif (vet[i] == "NETFLIX"):
		vtei[1] = vtei[1] + 1
	elif(vet[i] == "YOUTUBE"):
		vtei[2] = vtei[2] + 1
print(vtei)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:58:01) 
-- CODE:
from numpy import*
vet = array(eval(input("TV, NETFLIX e YOUTUBE:")))
vtei = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		vtei [0] = vtei[0] + 1
	elif (vet[i] == "NETFLIX"):
		vtei[1] = vtei[1] + 1
	elif(vet[i] == "YOUTUBE"):
		vtei[2] = vtei[2] + 1
print(vtei)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:58:10) 
-- CODE:
from numpy import*
vet = array(eval(input("TV, NETFLIX e YOUTUBE:")))
vtei = zeros(3, dtype=int)

for i in range(size(vet)):
	if (vet[i] == "TV"):
		vtei [0] = vtei[0] + 1
	elif (vet[i] == "NETFLIX"):
		vtei[1] = vtei[1] + 1
	elif(vet[i] == "YOUTUBE"):
		vtei[2] = vtei[2] + 1
print(vtei)



-- EXECUTION TIME:
1.11097
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 3 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 1 1]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 2 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
